force-app/main/default/objects/Case/fields/Account_CSM_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM_Name__c</fullName>
    <label>Account CSM</label>
    <description>CSM name stamped on the Case at creation. Visible to L1 agent without needing to click through to the Account. Does not auto-update if CSM changes later.</description>
    <inlineHelpText>CSM assigned to the Account at the time this Case was created.</inlineHelpText>
    <type>Text</type>
    <length>120</length>
</CustomField>