force-app/main/default/objects/Case/fields/Account_LTM_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Account_LTM_Revenue__c</fullName>
    <label>Account LTM Revenue</label>
    <description>Sum of Revenue_Booked_Amount__c on accounts_revenue__c for the last 12 months. Stamped at Case creation. Optional — only populated if LTM revenue rollup is built.</description>
    <inlineHelpText>Last 12 months revenue booked for this account, stamped when Case was created.</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>