force-app/main/default/objects/Case/fields/Account_Revenue_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Revenue_Tier__c</fullName>
    <label>Account Revenue Tier</label>
    <description>Customer tier at time of Case creation. Stamped automatically by Case_RevenueTier_BeforeSave Flow. Immutable for the life of the Case — do not edit manually.</description>
    <inlineHelpText>Customer support tier stamped at Case creation. Used for SLA tracking and routing.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HYPERCARE</fullName>
            </value>
            <value>
                <fullName>STRATEGIC</fullName>
            </value>
            <value>
                <fullName>PREMIUM</fullName>
            </value>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
                <default>true</default>
                <label>UNKNOWN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>