force-app/main/default/objects/Case/fields/Account_Revenue_Tier_Badge__c.field-meta.xml
<CustomField>
    <fullName>Account_Revenue_Tier_Badge__c</fullName>
    <label>Tier</label>
    <description>Visual tier badge with emoji for compact layout display. Derived from Account_Revenue_Tier__c.</description>
    <type>Text</type>
    <length>60</length>
    <formula>CASE(TEXT(Account_Revenue_Tier__c),
  &quot;HYPERCARE&quot;, &quot;🚨 HYPERCARE&quot;,
  &quot;STRATEGIC&quot;, &quot;⭐ STRATEGIC&quot;,
  &quot;PREMIUM&quot;,   &quot;🔷 PREMIUM&quot;,
  &quot;UNKNOWN&quot;,   &quot;❓ UNKNOWN&quot;,
  &quot;STANDARD&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>