force-app/main/default/objects/Case/fields/Is_Top_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Top_Customer__c</fullName>
    <label>Top Customer</label>
    <description>Mirror of Account.Top_Customer__c on the Case for use in list views and assignment rules.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>